<resources>
    <string name="id_pager">123091234</string>
    <string name="app_name">Money Assist</string>
    <string name="wait_message">Please wait...</string>
    <string name="action_settings">Settings</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="action_add_category_home">Add Category</string>
    <string name="action_edit_category_home">Edit Category</string>
    <string name="action_delete_an_expense">Delete an Expense</string>
    <string name="action_delete_an_income">Delete an Income</string>
    <string name="action_delete_category">Delete Category</string>
    <string name="category_select_add_expense_income">Select your category</string>
    <string name="amount_add_expense_income">Enter your amount</string>
    <string name="date_add_expense_income">Enter your date</string>
    <string name="investement_expense_income">Is an investment ?</string>
    <string name="description_add_expense_income">Please provide a description</string>
    <string name="side_panel_items_array_home">Home</string>
    <string name="side_panel_items_array_income_expense">Add Expense/Income</string>
    <string name="side_panel_items_array_expense">Expense</string>
    <string name="side_panel_items_array_income">Income</string>
    <string name="side_panel_items_array_category">Category</string>
    <string name="CURRENCY">CURRENCY</string>
    <string name="side_panel_items_array_setting">Setting</string>
    <string name="side_panel_items_array_get_total">Income And Expense Total</string>
    <string name="side_panel_items_array_currency">Set your currency</string>
    <string name="side_panel_items_array_export_Excel">Export to Excel</string>
    <string name="side_panel_items_array_archive">Archive</string>
    <string name="side_panel_items_array_load_from_archive">Load From Archive</string>
    <string name="side_panel_items_array_help">Contact Us</string>
    <string name="side_panel_items_array_utilities">Utilities</string>
    <string name="edit_income">Edit Income</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="future">Future</string>
    <string name="today">Today</string>
    <string name="older">Older</string>
    <string name="within_a_week">Within A Week</string>
    <string name="within_a_month">Within A Month</string>
    <string name="action_reset_to_original">Reset</string>
    <string name="action_sort_by_day">Group by date</string>
    <string name="action_sort_by_month">Group by month</string>
    <string name="action_sort_by_category">Group by categories</string>
    <string name="action_sort_by_other_factors">Advance Filter</string>
    <string-array name="side_panel_items_array">
        <item>@string/side_panel_items_array_home</item>
        <item>@string/side_panel_items_array_get_total</item>
        <item>@string/side_panel_items_array_expense</item>
        <item>@string/side_panel_items_array_income</item>
        <item>@string/side_panel_items_array_category</item>
        <item>@string/side_panel_items_array_currency</item>
        <item>@string/side_panel_items_array_utilities</item>
        <item>@string/side_panel_items_array_help</item>
    </string-array>
    <string-array name="category_array_expense">
        <item>Expense Default</item>
    </string-array>
    <string-array name="category_array_income">
        <item>Income Default</item>
    </string-array>
    <string-array name="setting_name_array">
        <item>@string/currency_settings</item>
        <item>@string/category_settings</item>
        <item>@string/duration_settings</item>
        <item>@string/amount_settings</item>
    </string-array>
    <string name="nocurrency">NO CURRENCY</string>
    <string name="othercurrency">Other</string>
    <string-array name="currency_list">
        <item>@string/nocurrency</item>
        <item>@string/othercurrency</item>
        <item>AED!cna!United Arab Emirates Dirham</item>
        <item>ARS!cna!Argentine Peso</item>
        <item>AUD!cna!Australian Dollar</item>
        <item>BGN!cna!Bulgarian Lev</item>
        <item>BND!cna!Brunei Dollar</item>
        <item>BOB!cna!Bolivian Boliviano</item>
        <item>BRL!cna!Brazilian Real</item>
        <item>CAD!cna!Canadian Dollar</item>
        <item>CHF!cna!Swiss Franc</item>
        <item>CLP!cna!Chilean Peso</item>
        <item>CNY!cna!Chinese Yuan Renminbi</item>
        <item>COP!cna!Colombian Peso</item>
        <item>CZK!cna!Czech Republic Koruna</item>
        <item>DKK!cna!Danish Krone</item>
        <item>EGP!cna!Egyptian Pound</item>
        <item>EUR!cna!Euro</item>
        <item>FJD!cna!Fijian Dollar</item>
        <item>GBP!cna!British Pound Sterling</item>
        <item>HKD!cna!Hong Kong Dollar</item>
        <item>HRK!cna!Croatian Kuna</item>
        <item>HUF!cna!Hungarian Forint</item>
        <item>IDR!cna!Indonesian Rupiah</item>
        <item>ILS!cna!Israeli New Sheqel</item>
        <item>INR!cna!Indian Rupee</item>
        <item>JPY!cna!Japanese Yen</item>
        <item>KES!cna!Kenyan Shilling</item>
        <item>KRW!cna!South Korean Won</item>
        <item>LTL!cna!Lithuanian Litas</item>
        <item>MAD!cna!Moroccan Dirham</item>
        <item>MXN!cna!Mexican Peso</item>
        <item>MYR!cna!Malaysian Ringgit</item>
        <item>NOK!cna!Norwegian Krone</item>
        <item>NZD!cna!New Zealand Dollar</item>
        <item>PEN!cna!Peruvian Nuevo Sol</item>
        <item>PHP!cna!Philippine Peso</item>
        <item>PKR!cna!Pakistani Rupee</item>
        <item>PLN!cna!Polish Zloty</item>
        <item>RON!cna!Romanian Leu</item>
        <item>RSD!cna!Serbian Dinar</item>
        <item>RUB!cna!Russian Ruble</item>
        <item>SAR!cna!Saudi Riyal</item>
        <item>SEK!cna!Swedish Krona</item>
        <item>SGD!cna!Singapore Dollar</item>
        <item>THB!cna!Thai Baht</item>
        <item>TRY!cna!Turkish Lira</item>
        <item>TWD!cna!New Taiwan Dollar</item>
        <item>UAH!cna!Ukrainian Hryvnia</item>
        <item>USD!cna!US Dollar</item>
        <item>VEF!cna!Venezuelan BolÃ­Â­var Fuerte</item>
        <item>VND!cna!Vietnamese Dong</item>
        <item>ZAR!cna!South African Ran</item>
    </string-array>
    <string name="to">to</string>
    <string name="income_message">An amount of !*a*! was received as an income for item/service in !*c*! category on !*d*!</string>
    <string name="expense_message">An amount of !*a*! was spent for purchasing an item/service in !*c*! category on !*d*!</string>
    <string name="marked_as_investment_message">This item has been marked as an investment.</string>
    <string name="description_title_message">Description given for the item :</string>
    <string name="details">More Info</string>
    <string name="home_page">Home</string>
    <string name="title_activity_add_category">Add New Category</string>
    <string name="check_box_list_title_message">Select categories for your search filter</string>
    <string name="check_box_list_title_message_total_calculate">Select categories to be included while calculating Income And Expense total</string>
    <string name="check_box_list_title_message_total_excel_export">Select categories from which data should be exported to Excel</string>
    <string name="start_end_date_message">Select start and end date check box to enable and include the selected days in your filter</string>
    <string name="max_min_amount_message">Select maximum and minimum amount check box to enable and filter by using them as at-most and the least value of the amount spent/received</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="start_date_message">Start Date </string>
    <string name="end_date_message">End Date </string>
    <string name="min_amount_message">Minimum Amount </string>
    <string name="max_amount_message">Maximum Amount </string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_delete">Cancel Delete</string>
    <string name="archive">Archive</string>
    <string name="info">Info</string>
    <string name="proceed">Proceed</string>
    <string name="dialog_title_message_confirmation">Confirmation!</string>
    <string name="delete_dialog_title_message">Delete Confirmation!</string>
    <string name="delete_dialog_description_message">Are you sure yow want to delete the item ?</string>
    <string name="update_dialog_des_sucess_message">Update  Successful!</string>
    <string name="delete_dialog_des_sucess_message">Delete  Successful!</string>
    <string name="delete_dialog_des_failed_message">Delete Failed!</string>
    <string name="title_activity_category_delete_confirmation">Delete Confirmation</string>
    <string name="category_delete_message_no_items">Are you sure you want to delete the Category ?</string>
    <string name="category_delete_message_with_items">It seems you have already added !*ei*! items to this category. Please select any of the options below and proceed</string>
    <string name="category_move_the_items">Move items !*c*! to a different category</string>
    <string name="category_delete_all_items">Delete all items in !*c*!</string>
    <string name="error_select_category">Please select a category?</string>
    <string name="duration_message_title">The data to plot Expense - Income chart, will be within the duration specified in Duration setting</string>
    <string name="duration_message">Select and enter number of previous days, months or years data to be utilised</string>
    <string name="start_end_date_message_duration_setting">Select any or both  start and end date check box to specify the duration</string>
    <string name="max_min_amount_message_amount_Setting">Select and enter maximum and minimum amount check box to specify at-most and the least value of the amount spent/received in amount settings</string>
    <string name="amount_settings">Amount Settings</string>
    <string name="duration_settings">Duration Settings</string>
    <string name="category_settings">Category Settings</string>
    <string name="currency_settings">Currency Settings</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="years">Years</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="calc_new_summary">Calculate New Summary</string>
    <string name="validation_msg_add_edit_expence_income_description">It seems you have not give any description. Do you want to continue without any description?</string>
    <string name="validation_msg_add_edit_expence_income_amount__no_description_alert">Do not show this message again</string>
    <string name="title_activity_set_your_currency">Set Your Currency</string>
    <string name="currencyHint">Enter your currency</string>
    <string name="expense_heading_show_total_details">Expense Incurred for:</string>
    <string name="income_heading_show_total_details">Income Obtained form:</string>
    <string name="duration_heading_show_total_details">Calculated for Time Period:</string>
    <string name="load_current_archive">Reload Archived Data</string>
    <string name="delete_current_archive">Delete Archived Data</string>
    <string name="delete_reloaod_current_archive_title">Reload/Delete Archived Data</string>
    <string name="archive_message">By performing this action your data will be archived. At a later point of time you can load your data back from archive</string>
    <string name="reload_archive_message">Note: By reloading from archive all your current data will be lost. </string>
    <string name="deleter_archive_message">Note: By deleting your archive will be permanently lost.</string>
</resources>