<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete_reloaod_current_archive_title"
        android:textColor="@color/backgroud_white"
        android:textAllCaps="true"
        android:background="@color/app_green"
        android:contentDescription="@string/app_name" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/backgroud_white"
        android:text="@string/load_current_archive"
        android:id="@+id/load_current_archive"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/info_message_dialog_archive_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/reload_archive_message"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/text_normal"
        android:textSize="12dp"
        android:visibility="visible"

        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/backgroud_white"
        android:text="@string/delete_current_archive"
        android:id="@+id/delete_current_archive"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/info_message_dialog_archive_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/deleter_archive_message"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/text_normal"
        android:textSize="12dp"
        android:visibility="visible"

        />
</LinearLayout>