<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skr.expensetrack.UtilitiesFragment">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/backgroud_white"
        android:text="@string/side_panel_items_array_archive"
        android:id="@+id/archive_data"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/backgroud_white"
        android:text="@string/side_panel_items_array_load_from_archive"
        android:id="@+id/load_from_Archive"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/backgroud_white"
        android:text="@string/side_panel_items_array_export_Excel"
        android:id="@+id/export_to_excel"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>
