<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.skr.expensetrack.CategoryDeleteConfirmationActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="280dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:minHeight="190dp"
        android:background="@drawable/popupbackground"
        >
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:id="@+id/headingCDCA"
            >


        <TextView
android:id="@+id/deleteCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_activity_category_delete_confirmation"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/backgroud_white"

            android:background="@drawable/text_view_title_background"
            android:layout_margin="1dp"
            />
        <Button
            android:id="@+id/clear_txt_max"
            android:visibility="visible"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/clear_text" />

            </FrameLayout>
        <TextView
            android:id="@+id/expenceIncomeMessageCGDA"
            android:layout_below="@+id/headingCDCA"
            android:layout_width="240dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/expense_message"
            android:gravity="center_horizontal"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/expenceIncomeMessageCGDA"
            android:id="@+id/radio_group_category"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp"
            android:buttonTint="@color/text_normal"
            android:orientation="vertical">
            <RadioButton android:id="@+id/move_category"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_move_the_items"
                android:background="#ffffffff"
                android:textColor="#000000"
                android:layout_weight="1"
                android:checked="true"
               />
            <RadioButton android:id="@+id/delete_all_items_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:background="#ffffffff"
                android:textColor="#000000"
                android:layout_weight="1"
                android:text="@string/category_delete_all_items"
                />
        </RadioGroup>


       <Spinner

           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:id="@+id/categoryListOthers"
           android:background="@drawable/normal_edit_text_background"
           android:layout_below="@+id/radio_group_category"
           android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"

           />
<TextView
android:id="@+id/error_select_category"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/error_select_category"
    android:textColor="@color/error_red"
    android:visibility="gone"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:layout_below="@+id/categoryListOthers"
    android:layout_centerHorizontal="true"
    />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/roundedbutton"
            android:textColor="@color/backgroud_white"
            android:text="@string/proceed"
            android:id="@+id/proceed_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/categoryListOthers"
            />
        </RelativeLayout>

</RelativeLayout>
