<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.skr.expensetrack.SetYourCurrencyActivity">

    <RelativeLayout android:layout_height="190dp"
        android:layout_width="280dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:minHeight="190dp"
        android:background="@drawable/popupbackground"
        >

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/headingSYC"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_activity_set_your_currency"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_view_title_background"
                android:layout_margin="1dp"
                />
            <Button
                android:id="@+id/closeSYC"
                android:visibility="visible"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/clear_text" />

        </FrameLayout>


        <EditText

            android:layout_below="@+id/headingSYC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/editTextCurrencySaveEditText"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/currencyHint"
            android:textColorHint="@color/material_blue_grey_900"
            android:background="@drawable/normal_edit_text_background"
            android:textColor="@color/material_blue_grey_900"

            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/roundedbutton"
            android:textColor="@color/backgroud_white"
            android:text="@string/save"
            android:id="@+id/save_settings_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            />
        </RelativeLayout>

</RelativeLayout>
